# iap-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  README.tpl
.github/workflows/: ci.yml
examples/: deserialize.rs
res/: test_apple.json  test_google.json
src/: apple.rs  error.rs  google.rs  lib.rs
