[package]
name = "iap"
version = "0.2.0"
authors = ["Stephan Dilly <dilly.stephan@gmail.com>, Lyon Beckers<lyonbeckers@gmail.com>"]
edition = "2018"
repository = "https://github.com/gameroasters/iap-rs"
license = "MIT"
keywords = ["google","apple","mobile","purchases","verifaction"]
categories = ["web-programming","asynchronous"]
description = "async google/apple receipt validation using hyper"

[dependencies]
async-recursion = "0.3"
async-trait = "0.1"
chrono = "0.4"
hyper = { version = "0.14", features = ["http1"] }
hyper-tls = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
thiserror = "1.0"
yup-oauth2 = { version="5.0.3", default-features = false, features = ["hyper-tls"] }

[dev-dependencies]
tokio = { version = "1.1", default-features = false, features = ["macros"] }
mockito = "0.29"
serial_test = "0.5.1"